--- a/src/app/components/buttons/floating-button/floating-button.component.html
+++ b/src/app/components/buttons/floating-button/floating-button.component.html
@@ -1,7 +1,12 @@
-<div class="chat-wrapper">
-  <div class="container">
-    <div class="chat">
-      <i class="fab fa-whatsapp"></i>
-    </div>
+<div class="floating-button">
+  <div class="floating-button__container">
+    <a
+      class="floating-button__link"
+      href="https://wa.me/554399599130?text=Ol%C3%A1%2C%20tudo%20bem%3F%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es."
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <i class="floating-button__icon fab fa-whatsapp"></i>
+    </a>
   </div>
 </div>
