--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -1,39 +1,45 @@
 <section class="hero">
-  <div class="hero__container" *ngIf="!isMobile">
-    <button class="hero__nav-button">
-      <img src="images/icons/arrow-left.svg" alt="" />
-    </button>
+  <div class="hero__container">
+    <!--<button class="hero__nav-button">-->
+    <!--  <img src="images/icons/arrow-left.svg" alt="" />-->
+    <!--</button>-->
     <div class="hero__carousel">
       <div class="hero__left">
         <h1 class="hero__title">
           Cuidar da mente pode transformar
-          <span class="hero__emph-primary">uma vida</span>
+          <span class="hero__text-primary hero__text-strong">uma vida</span>
         </h1>
 
         <p class="hero__paragraph">
           Psicologia centrada em você, para promover seu
-          <span class="hero__emph-secondary">equilíbrio emocional</span> do
-          jeito certo
+          <span class="hero__text-secondary hero__text-strong"
+            >equilíbrio emocional</span
+          >
+          do jeito certo
         </p>
 
         <div class="hero__buttons">
-          <button class="hero__button hero__button--primary">Conversar</button>
-          <button class="hero__button hero__button--secondary">
-            Como funciona?
-          </button>
+          <a
+            class="hero__button hero__button--primary"
+            href="https://wa.me/554399599130?text=Ol%C3%A1%2C%20tudo%20bem%3F%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es."
+            target="_blank"
+            rel="noopener noreferrer"
+            >Conversar</a
+          >
+          <a class="hero__button hero__button--secondary"> Como funciona? </a>
         </div>
       </div>
       <div class="hero__right">
-        <img class="hero__image" src="images/hero/hero1.png" alt="" />
+        <img class="hero__image" src="images/hero/hero2.png" alt="" />
       </div>
-      <div class="hero__indexes">
-        <div class="hero__index hero__index--active"></div>
-        <div class="hero__index"></div>
-        <div class="hero__index"></div>
-      </div>
+      <!--<div class="hero__indexes">-->
+      <!--  <div class="hero__index hero__index&#45;&#45;active"></div>-->
+      <!--  <div class="hero__index"></div>-->
+      <!--  <div class="hero__index"></div>-->
+      <!--</div>-->
     </div>
-    <button class="hero__nav-button">
-      <img src="images/icons/arrow-right.svg" alt="" />
-    </button>
+    <!--<button class="hero__nav-button">-->
+    <!--  <img src="images/icons/arrow-right.svg" alt="" />-->
+    <!--</button>-->
   </div>
 </section>
