--- a/src/app/sections/services/services.component.html
+++ b/src/app/sections/services/services.component.html
@@ -15,14 +15,21 @@
         [description]="service.description"
         [subtitle]="service.subtitle"
         [icon]="service.icon"
+        [image]="service.image"
+        [imageClass]="service.imageClass"
       ></app-service>
     </div>
     <p class="services__paragraph">
-      Soluções completas em saúde mental para promover bem-estar e
+      Soluções completas em saúde mental para promover bem-estar,
       desenvolvimento pessoal e profissional.
     </p>
-    <button class="services__button services__button--primary">
-      Ver todos
-    </button>
+    <div class="services__buttons">
+      <button class="services__button services__button--primary">
+        Conversar
+      </button>
+      <button class="services__button services__button--primary-outline">
+        Ver todos
+      </button>
+    </div>
   </div>
 </section>
