--- a/src/app/components/buttons/toggle-button/toggle-button.component.scss
+++ b/src/app/components/buttons/toggle-button/toggle-button.component.scss
@@ -7,11 +7,10 @@
   align-items: center;
   justify-content: center;
   border-radius: 12px;
-  border: 1px solid #ececec;
-  background-color: white;
+  border: 1px solid #ede9e1;
+  background-color: #f9f8f6;
   flex-direction: column;
   padding: 10px;
-  box-sizing: border-box;
   gap: 10px;
 
   &--active {
@@ -25,7 +24,7 @@
     }
   }
   &__line {
-    background-color: #424243;
+    background-color: #323233;
     height: 2px;
     border-radius: 8px;
     transition:
