--- a/src/app/components/cards/member/member.component.html
+++ b/src/app/components/cards/member/member.component.html
@@ -1,18 +1,22 @@
-<div class="member">
-  <div class="member__indicator">
-    <i class="fas fa-hand-pointer"></i>
-  </div>
+<div class="member"
+     role="button"
+     tabindex="0"
+     [class.is-active]="active"
+     (click)="onClick($event)"
+     (keydown.enter)="onClick($event)"
+     (keydown.space)="onClick($event)"
+
+>
   <img class="member__image" [src]="photo.src" [alt]="photo.alt" />
-  <div class="member__info">
-    <h4 class="member__name">
-      {{ name }}
-    </h4>
+
+  <div class="member__overlay">
+    <h4 class="member__name">{{ name }}</h4>
+    <i class="fa-sharp-duotone fa-solid fa-chevron-up member__icon"></i>
+    <div class="member__about">
+      {{ about }}
+    </div>
     <div class="member__networks">
       <div class="member__network" *ngFor="let network of networks"></div>
     </div>
-    <p class="member__about">
-      {{ about }}
-    </p>
-    <div class="member__line"></div>
   </div>
 </div>
