--- a/src/app/components/cards/member/member.component.scss
+++ b/src/app/components/cards/member/member.component.scss
@@ -1,135 +1,90 @@
 .member {
-  height: 400px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  align-items: center;
-  justify-content: center;
-  border-radius: 24px;
-  padding: 0;
-  box-sizing: border-box;
-  transition: padding 0.6s;
   position: relative;
+  width: 100%;
+  height: 408px;
+  border-radius: 24px;
+  overflow: hidden;
+  background-color: #ffffff;
   cursor: pointer;
-  &:hover {
-    .member__info {
-      width: calc(100% - 40px);
-      height: 180px;
-      border-radius: 18px;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  @media (max-width: 1400px) {
+    width: 300px;
+  }
+  &.is-active {
+    .member__overlay {
+      height: 160px;
     }
-    .member__indicator {
-      opacity: 0;
+    .member__icon {
+      rotate: 180deg;
     }
   }
-  &__info {
-    background-color: white;
-    position: absolute;
-    width: 180px;
-    text-align: center;
-    height: 45px;
-    gap: 13px;
-    box-sizing: border-box;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    border-radius: 30px;
-    bottom: 20px;
-    transition:
-      width 0.7s ease-in-out,
-      height 0.7s ease-in-out,
-      overflow 0.7s ease-in-out,
-      border-radius 0.7s ease-in-out;
-  }
-  &__line {
-    min-height: 4px;
-    max-height: 4px;
-    width: 40px;
-    border-radius: 30px;
-    background-color: #ef7445;
-  }
-  @keyframes pulse {
-    0% {
-      transform: scale(1);
-      opacity: 0.7;
-    }
-    50% {
-      transform: scale(1.6);
-      opacity: 0;
-    }
-    100% {
-      transform: scale(1);
-      opacity: 0;
+  @media (min-width: 1400px) and (hover: hover) and (pointer: fine) {
+    &:hover {
+      .member__overlay {
+        height: 160px;
+      }
+      .member__icon {
+        rotate: 180deg;
+      }
     }
   }
 
-  &__indicator {
-    opacity: 1;
-    background: white;
-    width: 34px;
-    height: 34px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    position: absolute;
-    top: 18px;
-    right: 20px;
-    transition: opacity 0.6s ease-in-out;
-    &::before {
-      content: '';
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      background: white;
-      border-radius: 50%;
-      z-index: 0;
-      animation: pulse 2s infinite;
-    }
-    i {
-      position: relative;
-      z-index: 1;
-      font-size: 17px;
-      color: black;
-    }
-  }
-
-  &__name {
-    margin: 11px 0 0;
-    font-size: 18px;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-  }
-  &__icon {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 28px;
-    color: #1b655a;
-  }
-  &__networks {
-    width: 200px;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
-  &__network {
-    width: 28px;
-    height: 28px;
-    background: #1b655a;
-    border-radius: 50%;
-  }
-  &__about {
-    margin: 0;
-    font-size: 15px;
-    width: 200px;
-  }
   &__image {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  &__overlay {
+    position: absolute;
+    left: 16px;
+    right: 16px;
+    bottom: 16px;
+    overflow: hidden;
+    height: 34px;
+    background-color: #ffffff;
+    border-radius: 18px;
+    padding: 14px 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    transition: height 0.5s ease-in-out;
+  }
+
+  &__name {
+    margin: 0;
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+    color: #000000;
+  }
+
+  &__icon {
+    text-align: center;
+    font-size: 14px;
+    color: #000000;
+    transition: rotate 0.5s ease-in-out;
+  }
+
+  &__network {
+    min-width: 28px;
+    min-height: 28px;
+    max-width: 28px;
+    max-height: 28px;
+    border-radius: 50%;
+    border: 1px solid #ed794d;
+    background-color: white;
+  }
+
+  &__networks {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+  }
+
+  &__about {
+    text-align: center;
+    margin-bottom: 8px;
   }
 }
