--- a/src/app/layout/drawer/drawer.component.html
+++ b/src/app/layout/drawer/drawer.component.html
@@ -3,10 +3,15 @@
     <li
       *ngFor="let item of items"
       class="drawer__item"
-      [ngClass]="item.vClasses ? 'drawer__item--' + item.vClasses : ''"
+      [ngClass]="item.vClasses"
     >
       <a class="drawer__link" href="#">
         {{ item.name }}
+      </a>
+    </li>
+    <li class="drawer__item drawer__item--emphasis">
+      <a class="drawer__link" href="#">
+        {{button.name}}
       </a>
     </li>
   </ul>
