--- a/src/app/layout/drawer/drawer.component.scss
+++ b/src/app/layout/drawer/drawer.component.scss
@@ -10,7 +10,6 @@
   z-index: -1;
   transition: transform 0.3s ease-in-out;
   @include containers.container();
-
   &--active {
     transform: translateY(14px);
   }
@@ -19,12 +18,10 @@
     display: flex;
     flex-direction: column;
     margin: 0;
-    gap: 10px;
     padding: 10px;
     list-style: none;
     background-color: white;
-    border: 1px solid #ececec;
-    border-radius: 30px;
+    border-radius: 25px;
   }
   &__item {
     height: 40px;
@@ -33,7 +30,18 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    position: relative;
+    &:not(:last-child, :first-child) {
+      border-top: 1px solid #ede9e1;
+      //border-radius: 30px;
+    }
+    padding-top: 5px;
+    padding-bottom: 5px;
+    &:first-child {
+      padding-top: 0;
+    }
     &--emphasis {
+      box-sizing: border-box;
       @include buttons.button(
         $height: 40px,
         $padding: 0,
@@ -41,12 +49,14 @@
         $width: 100%
       );
       @include buttons.button-variant(
-        $bg-color: #ef7445,
-        $text-color: #ffffff,
-        $hover-bg: #ef7445,
-        $active-bg: #ef7445,
-        $font-weight: 500
+        $bg-color: white,
+        $text-color: #ef7445,
+        $hover-bg: rgba(239, 116, 69, 0.08),
+        $active-bg: rgba(239, 116, 69, 0.16),
+        $font-weight: 500,
+        $border: 1px solid #ef7445
       );
+
       .header__link {
         color: white;
       }
@@ -61,5 +71,8 @@
     justify-content: center;
     text-decoration: none;
     color: inherit;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    outline: none;
   }
 }
