--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,33 +2,35 @@
   <nav class="header__nav">
     <!--DESKTOP MODE-->
     <ul class="header__list" *ngIf="!isMobile">
-      <li class="header__item header__item--logo">
-        <img [src]="logo.src" [alt]="logo.alt">
+      <li class="header__item header__item--left">
+        <a class="header__link" href="#">
+          <img src="images/Logo.png" [alt]="logo.alt" style="width: 85px" />
+        </a>
       </li>
-      <li
-        *ngFor="let item of items; let i = index"
-        class="header__item"
-        [ngClass]="item.vClasses ? 'header__item--' + item.vClasses : ''"
-      >
+      <li *ngFor="let item of items; let i = index" class="header__item">
         <a class="header__link" href="#" (click)="onItemClick(i)" #nameRefs>
           {{ item.name }}
         </a>
+
         <div
-          *ngIf="i === 1"
           class="header__indicator"
-          [ngStyle]="{
-            left: indicatorLeft + 'px',
-            width: indicatorWidth + 'px',
-          }"
+          [ngClass]="{ 'header__indicator--visible': activeIndex === i }"
         ></div>
+      </li>
+      <li class="header__item header__item--right header__item--emphasis">
+        <a class="header__link" href="#">
+          {{ button.name }}
+        </a>
       </li>
     </ul>
     <!--MOBILE MODE-->
     <ul class="header__list" *ngIf="isMobile">
-      <li class="header__item header__item--logo">
-        <img [src]="logo.src" [alt]="logo.alt">
+      <li class="header__item header__item--left">
+        <a class="header__link" href="">
+          <img [src]="logo.src" [alt]="logo.alt" />
+        </a>
       </li>
-      <li class="header__item header__item--toggle">
+      <li class="header__item header__item--right">
         <!--TOGGLE BUTTON-->
         <ng-content select="app-toggle-button"></ng-content>
         <!--TOGGLE BUTTON-->
