--- a/src/app/sections/contact/contact.component.scss
+++ b/src/app/sections/contact/contact.component.scss
@@ -15,7 +15,6 @@ $radius: 20px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    gap: 60px;
     @include containers.container();
   }
 
@@ -25,21 +24,22 @@ $radius: 20px;
     justify-content: center;
     align-items: center;
     gap: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 60px;
   }
-  &__footer{
+
+  &__body {
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    margin-top: 10px;
+    gap: 70px;
   }
+
   &__label {
     margin: 0;
     color: #1d6a5f;
     border: 1px solid #1b655a;
     border-radius: 30px;
     padding: 0 18px;
-    height: 34px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,29 +56,45 @@ $radius: 20px;
       color: #ef7445;
       font-weight: 600;
     }
+    @media (max-width: 375px) {
+      font-size: 40px;
+    }
   }
 
   &__section {
     display: flex;
-    width: 100%;
+    flex-direction: row;
     height: 450px;
     gap: 60px;
+    @media (max-width: 992px) {
+      flex-direction: column;
+      height: auto;
+      width: 100%;
+    }
   }
 
   &__content {
-    width: 100%;
+    flex: 1;
+    min-width: 0;
+    //background: #ef7445;
 
     &-title {
       margin: 0 0 20px;
       font-size: 27px;
       line-height: 32px;
       font-weight: normal;
+      @media (max-width: 992px) {
+        text-align: center;
+      }
     }
     &-desc {
       margin: 0 0 30px;
       font-size: 18px;
-
       max-width: 610px;
+      @media (max-width: 992px) {
+        text-align: center;
+        max-width: 100%;
+      }
     }
   }
 
@@ -102,6 +118,7 @@ $radius: 20px;
       height: 55px;
       border-radius: 16px;
       background-color: #fbf1ed;
+      border: 1px solid #f8d3c4;
       color: #ef7445;
       font-size: 24px;
       display: inline-flex;
@@ -152,6 +169,7 @@ $radius: 20px;
       height: 55px;
       border-radius: 16px;
       background-color: #edfbf9;
+      border: 1px solid #b9d5d2;
       color: #1b655a;
       font-size: 24px;
       display: inline-flex;
@@ -168,19 +186,58 @@ $radius: 20px;
     }
   }
 
-  &__image,
+  &__image {
+    border-radius: $radius;
+    background-color: #ddd;
+    flex: 1;
+    min-width: 0;
+    height: 100%;
+    object-fit: cover;
+    &--mobile {
+      display: none;
+      @media (max-width: 992px) {
+        display: block;
+        width: 100%;
+        margin-bottom: 45px;
+      }
+    }
+    &--desktop {
+      display: block;
+      @media (max-width: 992px) {
+        display: none;
+      }
+    }
+  }
+
   &__map {
     border-radius: $radius;
     background-color: #ddd;
-    width: 100%;
+    flex: 1;
+    min-width: 0;
     height: 100%;
     object-fit: cover;
+    &--mobile {
+      display: none;
+      @media (max-width: 992px) {
+        width: 100%;
+        display: block;
+        margin-bottom: 45px;
+        height: 450px;
+      }
+    }
+    &--desktop {
+      display: block;
+      @media (max-width: 992px) {
+        display: none;
+      }
+    }
   }
 
   &__divider {
     width: 100%;
     height: 1px;
     background: #ececec;
+    margin-bottom: 60px;
   }
 
   &__paragraph {
