--- a/src/app/sections/method/method.component.html
+++ b/src/app/sections/method/method.component.html
@@ -1,33 +1,18 @@
 <section class="method">
-  <div class="method__container" *ngIf="!isMobile">
+  <div class="method__container">
     <div class="method__header">
       <h3 class="method__label">METODOLOGIA</h3>
       <h2 class="method__title">
         Nossa <span class="method__title--emphasis">Metodologia</span>
       </h2>
     </div>
-    <ul class="stepper">
-      <li
-        *ngFor="let step of steps"
-        class="stepper__step"
-        [ngClass]="step.vClass"
-      >
-        <div class="stepper__step-image">
-          <img
-            class="stepper__step-icon"
-            [src]="step.image.src"
-            [alt]="step.image.alt"
-          />
-        </div>
-        <div class="stepper__step-indicator">
-          <div class="stepper__step-circle"></div>
-          <div class="stepper__step-line"></div>
-        </div>
-        <div class="stepper__step-text">
-          <h4 class="stepper__step-title">{{ step.title }}</h4>
-          <p class="stepper__step-description">{{ step.description }}</p>
-        </div>
-      </li>
-    </ul>
+    <app-stepper [steps]="steps"></app-stepper>
+    <p class="method__paragraph">Ficou com alguma dúvida? Vamos conversar.</p>
+    <a
+      class="method__button method__button--primary"
+      href="https://wa.me/554399599130?text=Ol%C3%A1%2C%20tudo%20bem%3F%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es."
+      target="_blank"
+      rel="noopener noreferrer"
+    >Conversar</a>
   </div>
 </section>
