--- a/src/app/sections/spaces/spaces.component.scss
+++ b/src/app/sections/spaces/spaces.component.scss
@@ -2,90 +2,110 @@
 
 .spaces {
   box-sizing: border-box;
-  &__container {
-    box-sizing: border-box;
-    @include containers.container();
-  }
+  @include containers.container();
 
   &__header {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 30px;
   }
+
   &__label {
     margin: 0;
     color: #1d6a5f;
     border: 1px solid #1b655a;
     border-radius: 30px;
     padding: 0 18px;
-    height: 34px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: 500;
     font-size: 15px;
-    text-align: center;
+    font-weight: 500;
   }
+
   &__title {
     margin: 0;
     font-size: 46px;
-    line-height: 32px;
     font-weight: normal;
+    line-height: 32px;
+
     &--emphasis {
       color: #ef7445;
       font-weight: 600;
     }
+
+    @media (max-width: 375px) {
+      font-size: 40px;
+    }
   }
-  &__footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+  /* ===== Layout visual ===== */
+
+  &__layout {
+    margin: 60px auto;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+
+    @media (max-width: 900px) {
+      grid-template-columns: 1fr;
+    }
   }
-  &__paragraph {
-    margin: 0;
-    font-size: 20px;
-    max-width: 630px;
-    text-align: center;
-  }
-  &__masonry {
+
+  &__main-visual {
     display: flex;
     gap: 20px;
-    margin-top: 60px;
-    margin-bottom: 60px;
-  }
-  &__column {
     width: 100%;
+    height: 100%;
+  }
+
+  &__side-visuals {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    // Column 1:
-    &:nth-child(1) {
-      .spaces__element:nth-child(1) {
-        height: 560px;
-      }
-      .spaces__element:nth-child(2) {
-        height: 370px;
-      }
+
+    @media (max-width: 900px) {
+      flex-direction: row;
     }
-    // Column 2:
-    &:nth-child(2) {
-      .spaces__element:nth-child(1) {
-        height: 370px;
-      }
-      .spaces__element:nth-child(2) {
-        height: 560px;
-      }
+  }
+
+  /* ===== Placeholder de imagem ===== */
+
+  &__image {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    background-color: #f7f7f5;
+    border: 1px solid #f1f0ee;
+  }
+
+  &__image--main {
+    height: 100%;
+
+    @media (max-width: 900px) {
+      height: 320px;
     }
-    // Column 3:
-    &:nth-child(3) {
-      .spaces__element:nth-child(1) {
-        height: 560px;
-      }
-      .spaces__element:nth-child(2) {
-        height: 370px;
-      }
+  }
+
+  &__image--side {
+    height: 130px;
+
+    @media (max-width: 900px) {
+      height: 160px;
     }
+  }
+
+  /* ===== Texto final ===== */
+
+  &__paragraph {
+    max-width: 620px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+    line-height: 1.4;
   }
 }
