--- a/src/app/sections/team/team.component.scss
+++ b/src/app/sections/team/team.component.scss
@@ -13,6 +13,7 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
+    margin-bottom: 60px;
   }
   &__label {
     margin: 0;
@@ -20,7 +21,7 @@
     border: 1px solid #1b655a;
     border-radius: 30px;
     padding: 0 18px;
-    height: 34px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,6 +38,9 @@
       color: #ef7445;
       font-weight: 600;
     }
+    @media (max-width: 375px) {
+      font-size: 40px;
+    }
   }
   &__paragraph {
     margin: auto auto 20px;
@@ -45,23 +49,47 @@
     font-size: 20px;
     text-align: center;
   }
-  &__carousel {
-    margin-top: 70px;
+
+  &__carousel-container {
     margin-bottom: 60px;
     display: flex;
-    gap: 16px;
+    width: 100%;
+    overflow: hidden;
   }
-  &__button {
-    &--primary {
-      margin: auto;
-      @include buttons.button();
-      @include buttons.button-variant(
-        $bg-color: #ef7445,
-        $text-color: #ffffff,
-        $hover-bg: #ef7445,
-        $active-bg: #ef7445,
-        $font-weight: 500
-      );
+
+  &__carousel {
+    display: flex;
+    gap: 16px;
+    will-change: transform;
+    touch-action: pan-y;
+  }
+
+  &__controls {
+    display: none;
+    gap: 10px;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    @media (min-width: 740px) and (max-width: 1400px) {
+      display: flex;
     }
+  }
+
+  &__control-button {
+    min-width: 70px;
+    max-width: 70px;
+    @include buttons.button($height: 35px, $padding: 0 19px, $font-size: 16px);
+    @include buttons.button-variant(
+      $bg-color: white,
+      $text-color: #ef7445,
+      $hover-bg: rgba(239, 116, 69, 0.08),
+      $active-bg: rgba(239, 116, 69, 0.16),
+      $font-weight: 500,
+      $border: 1px solid #ef7445
+    );
+  }
+
+  &__control-icon {
+    color: #ef7445;
+    font-size: 17px;
   }
 }
